# problems

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
ackermann_rust/: Cargo.toml
ackermann_rust/src/: main.rs
billiard/: Cargo.toml
billiard/src/: .main.rs.swp  main.rs
collatz/: Cargo.toml
collatz/benches/: bench.rs
collatz/src/: collatz.rs  main.rs
collatz/src/lib/: lib.rs
dice_spell/: Cargo.toml  words.txt
dice_spell/src/: main.rs
eulerstep-py/: func.py
garland_words/: Cargo.toml
garland_words/fuzz/: Cargo.toml
garland_words/src/: lib.rs
h2o/: Cargo.toml
h2o/h2o/: Cargo.toml
h2o/h2o_macros/: Cargo.toml
h2o/h2o_proc_impl/: Cargo.toml
japanese-prison/: solve.py
lang-interp/: Cargo.toml
lang-interp/assets/: TODO.md  en_example1.txt  english.lang  fr_example1.txt  french.lang  sv_example.txt  svenska.example
lang-interp/src/: find_lang.rs  histogram.rs  language.rs  lib.rs  main.rs  ngram.rs
lucky_numbers/: Cargo.toml
lucky_numbers/src/: main.rs
mandelbrot/: Cargo.toml
mandelbrot/src/: lib.rs
morse/: Cargo.toml
morse/morse/: Cargo.toml
morse/morse-playback/: Cargo.toml
multiplier_of/: Cargo.toml
multiplier_of/src/: lib.rs
namenames_score/: Cargo.toml
namenames_score/src/: main.rs
non-abundant-sums/: Cargo.toml
non-abundant-sums/src/: main.rs
primes/: primerelated.py
reversible-numbers/: Cargo.toml
reversible-numbers/src/: main.rs
roman-numeral/: Cargo.toml
roman-numeral/roman-numeral/: Cargo.toml
rust_prime/: Cargo.toml
rust_prime/benches/: extern.rs  naive_sieve.rs  sieve.rs
src/: main.rs
(+15 files in other folders)
