[package]
name = "collatz"
version = "0.1.0"
authors = ["Emil Gardström <emil.gardstrom@gmail.com>"]

[dependencies]
clap = "2.10"
rayon = "*"

[workspace]


[lib]
name = "collatz"
path = "src/lib/lib.rs"

[[bin]]
name = "collatz-gen"
path = "src/main.rs"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
